[gd_scene load_steps=28 format=2]

[ext_resource path="res://scenes/elements/background_color.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/grid.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/screen.png" type="Texture" id=3]
[ext_resource path="res://scenes/pieces/birch_piece.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/pieces/pine_piece.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/pieces/fir_piece.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/basic_theme.tres" type="Theme" id=7]
[ext_resource path="res://art/tool.png" type="Texture" id=8]
[ext_resource path="res://art/tools_header.png" type="Texture" id=9]
[ext_resource path="res://scripts/score_keeper.gd" type="Script" id=10]
[ext_resource path="res://animation/boss_faces.tres" type="SpriteFrames" id=11]
[ext_resource path="res://art/faces/protester.png" type="Texture" id=12]
[ext_resource path="res://scenes/DialogueBoxHolder.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/tool.tscn" type="PackedScene" id=15]
[ext_resource path="res://art/dc0dw0y-6473555f-a449-4ca2-a519-7522693e870e.jpg" type="Texture" id=16]
[ext_resource path="res://scripts/boss.gd" type="Script" id=17]
[ext_resource path="res://ui/tool_button_theme.tres" type="Theme" id=18]
[ext_resource path="res://art/Tools/tools_tape2.png" type="Texture" id=19]
[ext_resource path="res://scenes/pieces/juniper_piece.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/day_two/day_two_level_one.gd" type="Script" id=21]
[ext_resource path="res://scenes/pieces/aspen_piece.tscn" type="PackedScene" id=22]
[ext_resource path="res://scripts/move_keeper.gd" type="Script" id=23]
[ext_resource path="res://art/Tools/tools_tape1.png" type="Texture" id=24]
[ext_resource path="res://ui/basic_theme_smaller_score.tres" type="Theme" id=25]
[ext_resource path="res://art/transition.png" type="Texture" id=26]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "selected",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "transition_to_scene"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 320, 320 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 1,
"values": [ true, false ]
}

[node name="day_two_level_one" type="Node2D"]

[node name="day_two_level_one" type="Node" parent="."]
script = ExtResource( 21 )
level_type = 1
moves = 15
current_day = 2
next_level_scene = "res://scenes/day_two/day_two_level_two.tscn"
stay_dialogue = "res://dialogue/day_two/day_two_one_stay.json"
continue_dialogue = "res://dialogue/day_two/day_two_one_move.json"
wanna_quit_dialogue = "res://dialogue/day_two/day_two_one_wanna_quit.json"
end_of_level_dialogue = "res://dialogue/day_two/day_two_one_001.json"

[node name="move_keeper" type="Node" parent="."]
script = ExtResource( 23 )
number_of_moves = 20

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = -668.0
margin_top = 93.0
margin_right = 1252.0
margin_bottom = 1173.0
texture = ExtResource( 16 )

[node name="BackgroundColor2" parent="." instance=ExtResource( 1 )]
color = Color( 0.235294, 0.341176, 0.305882, 1 )

[node name="grid" parent="." instance=ExtResource( 2 )]
possible_pieces = [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 20 ), ExtResource( 22 ) ]

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="score_keeper" type="Node" parent="."]
script = ExtResource( 10 )

[node name="Control" type="Control" parent="."]
margin_right = 576.0
margin_bottom = 1024.0
theme = ExtResource( 7 )

[node name="Header" type="ColorRect" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1024.0
margin_bottom = -847.0
color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="MarginContainer2" type="MarginContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 384.0
margin_top = -1024.0
margin_right = -64.0
margin_bottom = -906.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="score_header" type="RichTextLabel" parent="Control/MarginContainer2"]
margin_right = 128.0
margin_bottom = 40.0
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "[center]SCORE[/center]"
text = "SCORE"
fit_content_height = true

[node name="Screen2" type="Sprite" parent="Control"]
modulate = Color( 0.137255, 0.137255, 0.137255, 1 )
position = Vector2( 483, 111 )
rotation = 3.14159
scale = Vector2( 1.25, -1 )
texture = ExtResource( 3 )

[node name="MarginContainer3" type="MarginContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -1024.0
margin_right = -446.0
margin_bottom = -905.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="timer_header" type="RichTextLabel" parent="Control/MarginContainer3"]
margin_right = 131.0
margin_bottom = 40.0
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "[center]MOVES[/center]"
text = "MOVES"
fit_content_height = true

[node name="Screen3" type="Sprite" parent="Control"]
modulate = Color( 0.137255, 0.137255, 0.137255, 1 )
position = Vector2( 97, 111 )
rotation = 3.14159
scale = Vector2( 1.25, 1 )
texture = ExtResource( 3 )

[node name="timer_text" type="RichTextLabel" parent="Control"]
margin_left = 22.0
margin_top = 83.0
margin_right = 120.0
margin_bottom = 123.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]∞[/center]"
text = "∞"
fit_content_height = true

[node name="countdown_timer" type="Timer" parent="Control/timer_text"]
one_shot = true

[node name="Tool_0" type="Sprite" parent="Control"]
visible = false
position = Vector2( 382, 174 )
texture = ExtResource( 8 )

[node name="Tool_1" type="Sprite" parent="Control"]
visible = false
position = Vector2( 582, 174 )
texture = ExtResource( 8 )

[node name="Tool_2" type="Sprite" parent="Control"]
visible = false
position = Vector2( 782, 174 )
texture = ExtResource( 8 )

[node name="ToolsHeader" type="Sprite" parent="Control"]
visible = false
position = Vector2( 586, 62 )
texture = ExtResource( 9 )

[node name="score" type="RichTextLabel" parent="Control"]
margin_left = 289.0
margin_top = 62.0
margin_right = 545.0
margin_bottom = 102.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_vertical = 4
theme = ExtResource( 25 )
bbcode_enabled = true
bbcode_text = "[center]10000[/center]"
text = "10000"
fit_content_height = true

[node name="xr_score" type="RichTextLabel" parent="Control"]
self_modulate = Color( 0.4, 0.588235, 0.00784314, 1 )
margin_left = 289.0
margin_top = 102.0
margin_right = 545.0
margin_bottom = 142.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_vertical = 4
theme = ExtResource( 25 )
bbcode_enabled = true
bbcode_text = "[center]10000[/center]"
text = "10000"
fit_content_height = true

[node name="Footer" type="ColorRect" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -174.0
margin_bottom = 3.0
color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 192.0
margin_top = -174.0
margin_right = -127.0
margin_bottom = -56.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control/MarginContainer"]
margin_right = 257.0
margin_bottom = 40.0
size_flags_vertical = 0
bbcode_enabled = true
bbcode_text = "[center]TOOLS[/center]"
text = "TOOLS"
fit_content_height = true

[node name="tool_saw" parent="Control" groups=["tools"] instance=ExtResource( 15 )]
position = Vector2( 329, 950 )

[node name="tool_combiner" parent="Control" groups=["tools"] instance=ExtResource( 15 )]
position = Vector2( 433, 950 )
frames = SubResource( 2 )
tool_i_am = 2

[node name="Tool_3" type="Sprite" parent="Control"]
visible = false
position = Vector2( 287, 937 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Tool_4" type="Sprite" parent="Control"]
visible = false
position = Vector2( 384, 951 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Tool_5" type="Sprite" parent="Control"]
visible = false
position = Vector2( 487, 937 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="ToolsHeader2" type="Sprite" parent="Control"]
visible = false
position = Vector2( 389, 881 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Boss" type="AnimatedSprite" parent="Control"]
position = Vector2( 103, 938 )
frames = ExtResource( 11 )
script = ExtResource( 17 )

[node name="boss_button" type="Button" parent="Control/Boss"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -122.0
margin_right = -3.0
margin_bottom = -1.0
theme = ExtResource( 18 )

[node name="Protester" type="Sprite" parent="Control"]
visible = false
position = Vector2( 103, 938 )
texture = ExtResource( 12 )

[node name="DialogueBoxHolder" parent="Control" instance=ExtResource( 14 )]
position = Vector2( 15, 524 )

[node name="DialogueBox" parent="Control/DialogueBoxHolder" index="0"]
dialogue_path = "res://dialogue/day_two/day_two_one_000.json"

[node name="Name" parent="Control/DialogueBoxHolder/DialogueBox" index="3"]
grow_horizontal = 0
custom_colors/default_color = Color( 0.847059, 0.768627, 0.811765, 1 )

[node name="Text" parent="Control/DialogueBoxHolder/DialogueBox" index="4"]
custom_colors/default_color = Color( 0.847059, 0.768627, 0.811765, 1 )

[node name="Screen" type="Sprite" parent="Control"]
visible = false
position = Vector2( 103, 939 )
texture = ExtResource( 3 )

[node name="continue_game" type="Control" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control/continue_game"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 63.0
margin_top = 573.0
margin_right = -63.0
margin_bottom = -191.0
color = Color( 0.172549, 0.192157, 0.215686, 1 )

[node name="stay" type="Button" parent="Control/continue_game"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.5
margin_top = 103.5
margin_bottom = 142.5
rect_scale = Vector2( 2, 2 )
text = "stay here"

[node name="continue" type="Button" parent="Control/continue_game"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.0
margin_top = 209.0
margin_bottom = 248.0
rect_scale = Vector2( 2, 2 )
text = "move on"

[node name="input_blocker" type="Control" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -172.0

[node name="ColorRect" type="ColorRect" parent="Control/input_blocker"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="grid_pauser" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Transition" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 576.0
margin_bottom = 1027.0

[node name="TextureRect" type="TextureRect" parent="Transition"]
self_modulate = Color( 0.137255, 0.137255, 0.137255, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -513.5
margin_right = 288.0
margin_bottom = 513.5
rect_min_size = Vector2( 576, 1027 )
rect_pivot_offset = Vector2( 288, 513 )
texture = ExtResource( 26 )
expand = true
stretch_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transition"]
autoplay = "transition_to_scene"
anims/transition_to_scene = SubResource( 3 )

[connection signal="moves_deplenished" from="move_keeper" to="day_two_level_one" method="_on_move_keeper_moves_deplenished"]
[connection signal="match_made" from="grid" to="day_two_level_one" method="_on_grid_match_made"]
[connection signal="swap_succesful" from="grid" to="move_keeper" method="_on_grid_swap_succesful"]
[connection signal="level_goal_reached" from="score_keeper" to="day_two_level_one" method="_on_score_keeper_level_goal_reached"]
[connection signal="protesters_matched" from="score_keeper" to="day_two_level_one" method="_on_score_keeper_protesters_matched"]
[connection signal="timeout" from="Control/timer_text/countdown_timer" to="Control/timer_text" method="_on_countdown_timer_timeout"]
[connection signal="button_down" from="Control/Boss/boss_button" to="Control/Boss" method="_on_boss_button_button_down"]
[connection signal="dialog_box_closed" from="Control/DialogueBoxHolder/DialogueBox" to="day_two_level_one" method="_on_DialogueBox_dialog_box_closed"]
[connection signal="dialog_box_closed" from="Control/DialogueBoxHolder/DialogueBox" to="Control/Boss" method="_on_DialogueBox_dialog_box_closed"]
[connection signal="pressed" from="Control/continue_game/stay" to="day_two_level_one" method="_on_stay_pressed"]
[connection signal="pressed" from="Control/continue_game/continue" to="day_two_level_one" method="_on_continue_pressed"]
[connection signal="timeout" from="grid_pauser" to="day_two_level_one" method="_on_grid_pauser_timeout"]

[editable path="Control/tool_saw"]
[editable path="Control/tool_combiner"]
[editable path="Control/DialogueBoxHolder"]
